# gijirog

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.claude/skills/session-log/: SKILL.md
docs/: README.md  milestones.md  session-log.md
infra/: .gitignore  package-lock.json
infra/lib/: gijirog-app-stack.ts
scripts/: bot.sh  run-dev-container.sh  run-dev.sh
src/gijirog/: __init__.py
